--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,7 +3,11 @@
 
 // Meta
 @import 'includes/variables';
+@import 'includes/elements';
 
 // Blocks
 @import 'blocks/document';
+@import 'blocks/header';
+@import 'blocks/home';
 @import 'blocks/root';
+
