--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -12,6 +12,7 @@
 @import 'blocks/details';
 @import 'blocks/document';
 @import 'blocks/footer';
+@import 'blocks/grads';
 @import 'blocks/home';
 @import 'blocks/menu';
 @import 'blocks/root';
