--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,8 +4,9 @@
 // Meta
 @import 'includes/variables';
 @import 'includes/elements';
-@import 'includes/mixins-screens';
 @import 'includes/mixins-grid';
+@import 'includes/mixins-screens';
+@import 'includes/mixins-ui';
 @import 'includes/responsive-image';
 
 // Blocks
@@ -19,4 +20,4 @@
 @import 'blocks/menu';
 @import 'blocks/root';
 @import 'blocks/sponsors';
-
+@import 'blocks/text-content';
