--- a/src/css/blocks/sponsors.scss
+++ b/src/css/blocks/sponsors.scss
@@ -5,6 +5,11 @@
     padding: 3rem;
   }
 
+  &__header {
+    margin-bottom: 2rem;
+    text-align: center;
+  }
+
   &__items {
     @include grid;
   }
