--- a/src/css/includes/responsive-image.scss
+++ b/src/css/includes/responsive-image.scss
@@ -1,18 +1,19 @@
-.responsive-image {}
-
-.responsive-image__shim {
+.responsive-image {
   position: relative;
   overflow: hidden;
+
+  &__shim {}
+
+  &__image {
+    display: block;
+    position: absolute;
+    width: 100%;
+    opacity: 0;
+    transition: 250ms linear opacity;
+  }
+
+  &__image--is-loaded {
+    opacity: 1;
+  }
 }
 
-.responsive-image__image {
-  display: block;
-  position: absolute;
-  width: 100%;
-  opacity: 0;
-  transition: 250ms linear opacity;
-}
-
-.responsive-image__image--loaded {
-  opacity: 1;
-}
