Light styling of archive

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -11,6 +11,7 @@
 
 // Blocks
 @import 'blocks/about';
+@import 'blocks/archive';
 @import 'blocks/details';
 @import 'blocks/document';
 @import 'blocks/footer';
