Rearranging styles and template for term section

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -10,15 +10,13 @@
 @import 'includes/responsive-image';
 
 // Blocks
-@import 'blocks/about';
 @import 'blocks/archive';
-@import 'blocks/details';
 @import 'blocks/document';
 @import 'blocks/footer';
-@import 'blocks/grad';
-@import 'blocks/grads';
+@import 'blocks/graduate';
+@import 'blocks/grads-index';
 @import 'blocks/home';
 @import 'blocks/menu';
 @import 'blocks/root';
-@import 'blocks/sponsors';
+@import 'blocks/term';
 @import 'blocks/text-content';
