--- a/src/css/blocks/graduate.scss
+++ b/src/css/blocks/graduate.scss
@@ -1,4 +1,4 @@
-.grad {
+.graduate {
   padding: 1rem;
   
   @include screen--medium {
@@ -41,8 +41,6 @@
 
   &__buttons {
     @include grid__item();
-
-    margin-bottom: 3rem;
     text-align: center;
   }
 
@@ -57,6 +55,8 @@
   &__work-samples {
     @include grid__item();
 
+    margin-top: 6rem;
+
     @include screen--medium {
       @include grid__item(2/3);
     }
@@ -70,5 +70,17 @@
 
   &__work-sample--description {
     text-align: center;
+  }
+
+  // All Grads Index
+
+  &__all-grads {
+    margin-top: 6rem;
+  }
+
+  &__all-grads-content {}
+
+  &__all-grads-header {
+    margin-bottom: 3rem;
   }
 }
