--- a/src/css/includes/variables.scss
+++ b/src/css/includes/variables.scss
@@ -24,3 +24,13 @@ $type__size--normal: 1rem;
 
 // Leading
 $type__leading--default: 1.5;
+
+/*
+  Layout
+*/
+
+// Spacing
+
+$layout__spacing--wide: 5rem;
+$layout__spacing--standard: 3rem;
+$layout__spacing--slim: 1rem;
