--- a/src/css/blocks/footer.scss
+++ b/src/css/blocks/footer.scss
@@ -1,8 +1,8 @@
 .footer {
-  padding: 1rem;
+  padding: $layout__spacing--slim;
 
   @include screen--medium {
-    padding: 5rem;
+    padding: $layout__spacing--wide;
   }
 
   &__content {
@@ -12,7 +12,7 @@
   &__about {
     @include grid__item;
 
-    margin-bottom: 1rem;
+    margin-bottom: $layout__spacing--slim;
 
     @include screen--large {
       @include grid__item(3/5);
