--- a/src/css/blocks/grads-index.scss
+++ b/src/css/blocks/grads-index.scss
@@ -7,7 +7,7 @@
   &__grad {
     @include grid__item;
 
-    margin-bottom: 2rem;
+    margin-bottom: $layout__spacing--standard;
 
     @include screen--medium {
       @include grid__item(1/3);
@@ -21,7 +21,7 @@
 
   &__grad-media {
     position: relative;
-    margin-bottom: 1rem;
+    margin-bottom: $layout__spacing--slim;
   }
 
   &__grad-image {
