Adding base header styles

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,6 +8,7 @@
 @import 'includes/mixins-layout';
 @import 'includes/mixins-screens';
 @import 'includes/mixins-ui';
+@import 'includes/typography';
 
 // Blocks
 @import 'blocks/archive';
