--- a/src/css/blocks/graduate.scss
+++ b/src/css/blocks/graduate.scss
@@ -50,6 +50,17 @@
 
   &__button--link {
     @include button;
+
+    .graduate--is-archived & {
+      border: 1px solid black;
+      padding: 0.75rem 2rem;
+      margin: 0 0.25rem;
+
+      &:hover {
+        background-color: black;
+        color: white;
+      }
+    }
   }
 
   &__work-samples {
