--- a/src/css/blocks/term.scss
+++ b/src/css/blocks/term.scss
@@ -31,6 +31,11 @@
     }
   }
 
+  &__details--directions {
+    margin-top: 1rem;
+    display: block;
+  }
+
 
   // About (Introduction) Section
 
@@ -54,6 +59,15 @@
     @include screen--medium {
       @include grid__item(2/3);
     }
+  }
+
+  //Ticket Link
+
+  &__attend-button {
+    @include button;
+
+    margin-top: $layout__spacing--standard;
+    display: block;
   }
 
   // Grads Section
