--- a/src/css/blocks/graduate.scss
+++ b/src/css/blocks/graduate.scss
@@ -39,7 +39,7 @@
   }
 
   &__interests {
-    margin-top: $layout__spacing--slim;
+    margin-bottom: $layout__spacing--slim;
   }
 
   &__interest {
