--- a/src/css/blocks/graduate.scss
+++ b/src/css/blocks/graduate.scss
@@ -39,6 +39,9 @@
   }
 
   &__interests {
+    @include grid__item();
+
+    text-align: center;
     margin-bottom: $layout__spacing--slim;
   }
 
@@ -46,8 +49,10 @@
     background-color: black;
     color: white;
     padding: 0.25rem 0.5rem;
+    margin: 0.25rem;
     font-size: 0.8rem;
     white-space: nowrap;
+    display: inline-block;
   }
 
   &__buttons {
