--- a/src/css/includes/variables.scss
+++ b/src/css/includes/variables.scss
@@ -5,6 +5,8 @@
 // Agnostic
 $color__white: #FFF;
 $color__black: #000;
+$color__grey: #CCC;
+$color__grey--dark: #666;
 
 // Site
 // $color__name--variant: #ABC;
